# cabinet_maker

./: .gitignore  Cargo.toml  RESEARCH.md
crates/cm-cabinet/: Cargo.toml
crates/cm-cabinet/src/: cabinet.rs  error.rs  lib.rs  part.rs  project.rs
crates/cm-cam/: Cargo.toml
crates/cm-cam/src/: error.rs  lib.rs  ops.rs  toolpath.rs
crates/cm-cli/: Cargo.toml
crates/cm-cli/src/: bom.rs  main.rs
crates/cm-cli/tests/: integration_test.rs
crates/cm-core/: Cargo.toml
crates/cm-core/src/: error.rs  geometry.rs  lib.rs  material.rs  tool.rs  units.rs
crates/cm-hardware/: Cargo.toml
crates/cm-hardware/src/: catalog.rs  error.rs  lib.rs
crates/cm-import/: Cargo.toml
crates/cm-import/src/: dxf_export.rs  dxf_import.rs  lib.rs
crates/cm-joinery/: Cargo.toml
crates/cm-joinery/src/: error.rs  lib.rs  rules.rs
crates/cm-nesting/: Cargo.toml
crates/cm-nesting/src/: error.rs  lib.rs  packer.rs  validate.rs
crates/cm-pipeline/: Cargo.toml
crates/cm-pipeline/src/: bom.rs  error.rs  estimate.rs  generate.rs  lib.rs  visualize.rs
crates/cm-post/: Cargo.toml
crates/cm-post/src/: error.rs  gcode.rs  lib.rs  machine.rs  validate.rs
crates/cm-server/: Cargo.toml
crates/cm-server/src/: error.rs  lib.rs  main.rs  state.rs
crates/cm-server/src/routes/: cabinet.rs  estimate.rs  export.rs  gcode.rs  machine.rs  mod.rs  nesting.rs  project.rs  session.rs
crates/cm-ui/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  tauri.conf.json
crates/cm-ui/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
crates/cm-ui/frontend/src/: app.css  app.html
crates/cm-ui/frontend/src/lib/: api.ts
crates/cm-ui/frontend/src/lib/components/layout/: Sidebar.svelte  TopBar.svelte
crates/cm-ui/frontend/src/lib/components/three/: CabinetScene.svelte  scene-utils.ts
crates/cm-ui/frontend/src/lib/stores/: history.test.ts
crates/cm-ui/frontend/src/routes/cabinets/: +page.svelte
crates/cm-ui/frontend/src/routes/cutlist/: +page.svelte
crates/cm-ui/frontend/src/routes/generate/: +page.svelte
crates/cm-ui/frontend/src/routes/nesting/: +page.svelte
crates/cm-ui/frontend/src/routes/preview/: +page.svelte
crates/cm-ui/frontend/src/routes/project/: +page.svelte
crates/cm-ui/src/: lib.rs  main.rs  state.rs
crates/cm-ui/src/commands/: cabinet.rs  export.rs  gcode.rs  machine.rs  mod.rs  nesting.rs  project.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/chunks/: B-0l54sc.js  B22MubrG.js  BI3IV-ao.js  BkaQf1bU.js  C0zNEv0Q.js  C2eLq_D0.js  CI19ujrK.js  CaLNNbA5.js  Ce36oStv.js  Cuutpi9m.js  CyNfHtry.js  D87RibR5.js  DEoDEiov.js  DUOIInB9.js  DWMYr-GH.js  DfOa05yV.js  EnNr4Sxw.js  IyXFpIzT.js  fxMAbPLm.js  pWOMhstZ.js  r8tgtEiy.js
frontend/.svelte-kit/output/client/_app/immutable/entry/: app.FctBJ47D.js  app.u5zubr-l.js  start.DJCVKwwN.js
frontend/.svelte-kit/output/client/_app/immutable/nodes/: 0.ImHCqvwQ.js  1.BKXg3vag.js  1.DSJ-PFMw.js  2.DYPXt9-p.js  2.Mvbldv3X.js  4.CGzheUYz.js  4.CNRMe9i-.js  6.Dwn1kyrC.js  6.QkvptnHM.js  7.ZWU91jLZ.js  8.C0nfdwuy.js  9.DobuUbMJ.js
frontend/.svelte-kit/output/prerendered/pages/: cutlist.html
frontend/.svelte-kit/output/server/: manifest-full.js  manifest.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/_app/immutable/assets/: _layout.D5afwOJM.css  _layout.DzaFYCrk.css
frontend/.svelte-kit/output/server/chunks/: api.js  history.js  index.js  index2.js  index3.js  internal.js  project.js  root.js  ui.js
frontend/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
frontend/.svelte-kit/output/server/entries/pages/cabinets/: _page.svelte.js
frontend/.svelte-kit/output/server/entries/pages/cutlist/: _page.svelte.js
frontend/.svelte-kit/output/server/entries/pages/generate/: _page.svelte.js
frontend/.svelte-kit/output/server/entries/pages/materials/: _page.svelte.js
frontend/.svelte-kit/output/server/entries/pages/nesting/: _page.svelte.js
frontend/.svelte-kit/output/server/entries/pages/preview/: _page.svelte.js
frontend/.svelte-kit/output/server/entries/pages/project/: _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: $types.d.ts
frontend/.svelte-kit/types/src/routes/cabinets/: $types.d.ts
frontend/.svelte-kit/types/src/routes/materials/: $types.d.ts
frontend/.svelte-kit/types/src/routes/nesting/: $types.d.ts
frontend/src/lib/: api.ts  types.test.ts  types.ts
frontend/src/lib/components/layout/: StatusBar.svelte  TopBar.svelte
frontend/src/lib/components/shared/: Toast.svelte
frontend/src/lib/components/three/: scene-utils.test.ts
frontend/src/lib/stores/: history.test.ts  history.ts  project.ts  ui.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/cabinets/: +page.svelte
frontend/src/routes/cutlist/: +page.svelte
frontend/src/routes/generate/: +page.svelte
frontend/src/routes/materials/: +page.svelte
profiles/: tormach-pcnc1100.toml
templates/: base_cabinet.toml  bookshelf.toml  corner_cabinet.toml  drawer_bank.toml  sink_base.toml  tall_cabinet.toml  vanity_base.toml  wall_cabinet.toml
templates/sets/: bathroom-vanity-set.toml  galley-kitchen.toml  l-shaped-kitchen.toml  workshop-storage.toml
