[workspace]
resolver = "2"
members = [
    "crates/cm-core",
    "crates/cm-cabinet",
    "crates/cm-cam",
    "crates/cm-post",
    "crates/cm-nesting",
    "crates/cm-import",
    "crates/cm-joinery",
    "crates/cm-hardware",
    "crates/cm-pipeline",
    "crates/cm-cli",
    "crates/cm-server",
]

# cm-ui is excluded from the workspace because Tauri requires system libraries
# (GTK, WebKit, libsoup) that aren't available outside the Docker build container.
# Build cm-ui with: cd crates/cm-ui && docker compose run --rm check
exclude = [
    "crates/cm-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cm-core = { path = "crates/cm-core" }
cm-cabinet = { path = "crates/cm-cabinet" }
cm-cam = { path = "crates/cm-cam" }
cm-post = { path = "crates/cm-post" }
cm-nesting = { path = "crates/cm-nesting" }
cm-import = { path = "crates/cm-import" }
cm-joinery = { path = "crates/cm-joinery" }
cm-hardware = { path = "crates/cm-hardware" }
cm-pipeline = { path = "crates/cm-pipeline" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
