[package]
name = "cm-cabinet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parametric cabinet model and part generation"

[dependencies]
cm-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
