[package]
name = "cm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum HTTP server for the cabinet maker web application"

[[bin]]
name = "cm-server"
path = "src/main.rs"

[dependencies]
cm-core = { workspace = true }
cm-cabinet = { workspace = true }
cm-cam = { workspace = true }
cm-post = { workspace = true }
cm-nesting = { workspace = true }
cm-import = { workspace = true }
cm-hardware = { workspace = true }
cm-pipeline = { workspace = true }
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
